# photo-archive

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  shell.nix  tsconfig.json  tsconfig.tsbuildinfo
resources/: ui.glade
src/: background.rs  errors.rs  lib.rs  main.rs  util.rs
src/adapters/: image_provider.rs  mod.rs
src/database/: mod.rs
src/formats/: jpeg.rs  mod.rs
src/model/: mod.rs  photo.rs  thumb.rs
src/ui/: dbprovider.rs  draw.rs  gallery.rs  image_list.rs  mod.rs
src/view/: background.rs  draw.rs  gallery.rs  mod.rs
web/: index.html
websrc/: State.ts  app.ts  index.html
websrc/components/: Custom.ts  Header.ts  VirtualGrid.ts
websrc/pages/: Gallery.ts  Page.ts  Slideshow.ts
websrc/routing/: HashRouter.ts
websrc/util/: AjaxRequest.ts  Cache.ts  Position.ts
