[package]
name = "photo-archive"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"

[dependencies]
bit-set = "0.5.1"
chrono = "0.4.9"
directories = "2.0.2"
lru = "0.1.17"
num-derive = "0.2"
num-traits = "0.2"
walkdir = "2.2.9"
rusqlite = "0.20.0"
structopt = "0.3.2"
failure = "0.1.5"
console = "0.9.0"
indicatif = "0.12.0"
dialoguer = "0.4.0"
ctrlc = "3.1.3"

image = "0.22.2"
kamadak-exif = "0.3.1"

log = "0.4.8"
env_logger = "0.6.2"
