[package]
name = "photo-archive"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"

[dependencies]
bit-set = "0.5.1"
chrono = { version = "0.4.9", features = ["serde"] }
directories = "2.0.2"
lru = "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2"
walkdir = "2.2.9"
rusqlite = "0.23.0"
structopt = "0.3.2"
failure = "0.1.5"
console = "0.9.0"
indicatif = "0.12.0"
dialoguer = "0.4.0"
ctrlc = "3.1.3"
sha2 = "0.8"
num_cpus = "1.10.1"
rayon = "1.2.0"
actix-web = "1.0.8"
actix = "0.8.3"
serde = "1.0.101"
serde_derive = "1.0.101"
hex = "0.4.0"
lazy_static = "1.4.0"

kamadak-exif = "0.3.1"

log = {version = "0.4.8", features = ["std"] }

[dependencies.image]
version = "0.22.2"
default-features = false
features = ["jpeg"]

[profile.release]
# Embed debug information even in release builds
# so that we can get meaningful profiles.
debug = true