[package]
name = "photo-archive"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"

[dependencies]
bit-set = "0.5.2"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock", "serde"] }
directories = "4.0.1"
lru = "0.7.6"
num-derive = "0.3.3"
num-traits = "0.2.15"
walkdir = "2.2.9"
rusqlite = "0.27.0"
structopt = "0.3.26"
failure = "0.1.8"
console = "0.15.0"
indicatif = "0.16.2"
dialoguer = "0.10.1"
ctrlc = "3.2.2"
sha2 = "0.10.2"
num_cpus = "1.13.1"
rayon = "1.2.0"
actix-web = "4.1.0"
actix-rt = "2.7.0"
actix = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
hex = "0.4.3"
lazy_static = "1.4.0"

kamadak-exif = "0.5.4"

log = {version = "0.4.17", features = ["std"] }

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["jpeg"]

[profile.release]
# Embed debug information even in release builds
# so that we can get meaningful profiles.
debug = true